plugins {
    id 'com.android.application'
}

android {
    namespace = "xyz.mordorx.sicmu"
    signingConfigs {
        release {
        }
    }
    compileSdkVersion 37
    defaultConfig {
        applicationId "xyz.mordorx.sicmu"
        minSdkVersion 26 // Android 8.0
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 28
        versionCode 39
        versionName '2.4.6'
        vectorDrawables.useSupportLibrary = true
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources = true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            debuggable true

        }
    }
    flavorDimensions "version"
    productFlavors {
        free {
            resValue "string", "app_name", "SicMu Neo"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        buildConfig = true
    }
    lint {
        baseline file('lint-baseline.xml')
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')

    // AndroidX Core
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.core:core:1.18.0'

    // Media
    implementation 'androidx.media:media:1.8.0'
    implementation "androidx.media3:media3-exoplayer:1.10.1"
    implementation "androidx.media3:media3-exoplayer-hls:1.10.1"
    implementation "androidx.media3:media3-session:1.10.1"
    implementation "androidx.media3:media3-datasource:1.10.1"

    // Database
    implementation "androidx.room:room-runtime:2.8.4"
    annotationProcessor "androidx.room:room-compiler:2.8.4"

    // Misc.
    implementation 'com.google.android.material:material:1.14.0'

    // Misc. external
    implementation 'com.github.woheller69:FreeDroidWarn:V1.6'

    // Testing
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'androidx.test:core:1.7.0'
    testImplementation 'com.google.android:android-test:4.1.1.4'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
}
